Melhorias no código